site/style.css
*{
    margin : 0px;
    padding: 0px;
    box-sizing: border-box;
}

body{
    margin: 0;
    padding: 0;
    justify-content: center;
    align-items: center;
    background: url("img/spices.jpg") no-repeat fixed;
    background-size: cover;
  }

nav{
    display: flex; /*the elements come side-by-side*/
    justify-content: space-around; /*gets same space around the elemnts*/
    align-items: center; /*aligns elemnts vertically center*/
    min-height: 10vh;
    /*background-color: rgb(5, 73, 3);*/
    background-color: rgb(100, 15, 15);
    font-family: 'Oswald', sans-serif;
    text-transform: uppercase;
}

#logo img{
    height: 8vh;
    margin-right: 10px;
}
#logo {
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 20%;
}
#logo p{
    text-decoration: none;
    letter-spacing: 3px;
    color: rgb(236, 111, 27);
    font-weight: bold;
}
.nav-links {
    display: flex;
    justify-content: space-around;
    width: 60%;
    list-style: none;
}

.nav-links a{
    text-decoration: none;
    letter-spacing: 3px;
    color: rgb(236, 111, 27);
    font-weight: bold;
}

.burger{
    display: none;
    cursor: pointer;
}

.burger div{
    width: 15px;
    height: 3px;
    margin: 4px 0;
    background-color:rgb(236, 111, 27);
}

.overlay{
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: rgba(0, 0, 0, 0.9);
    overflow-x: hidden;
    transition: 0.5s;
}

.overlay-content{
    position: relative;
    top: 25%;
    width: 100%;
    text-align: center;
    margin-top: 30px;
}

.overlay a{
    padding: 8px;
    text-decoration: none;
    font-size: 4vh;
    display: block;
    transition: 0.4s;
    letter-spacing: 3px;
    color: rgb(236, 111, 27);
    font-weight: bold;    
    font-family: 'Oswald', sans-serif;
    text-transform: uppercase;
}

.overlay .closebtn{
    position: absolute;
    top: 0;
    right: 45px;
    font-size: 60px;
}

.overlay a:hover{
    color:rgb(240, 179, 138);
}



.tagline{
    color: ivory;
    font-family: 'Oswald', sans-serif;
    font-size: 4vh;
    text-align: center;
    letter-spacing: 2px;
    background-color: rgba(39, 43, 43, 0.801);
    padding: 20px;
}




.content{
    background-color: rgb(0, 0, 0);
    width: 90%;
    margin: auto;
    padding: 40px;
}

.content p{
    color: ivory;
    font-family: 'Open Sans', sans-serif;
    font-size: 2vh;
    text-align: center;
}
#middlesub{
    text-align: center;
    color: rgb(236, 111, 27);
    font-weight: bold;    
    font-family: 'Oswald', sans-serif;
    text-transform: uppercase;
    font-size: 4vh;
    letter-spacing: 4px;
}

#small-sub{
    text-align: center;
    color: rgb(236, 111, 27);
    font-weight: bold;    
    font-family: 'Oswald', sans-serif;
    text-transform: uppercase;
    font-size: 2vh;
    letter-spacing: 4px;
}

hr{
    width: 50%;
    border: 2px solid rgb(236, 111, 27) ;
    margin: auto;
    text-align: center;
}
.content div{
    margin: 40px;
}
.fade-in{
    opacity: 0;
    transition: opacity 1000ms ease-in;
}

.fade-in.appear{
    opacity: 1;
}

.ranges{
    display: flex;
    justify-content: space-around;
    margin: auto;
    text-align: center;
    align-items: center;
}
.ranges img{
    width: 100px;
    margin: 10px;
}
.intro{
    align-items: center;
    text-align: center;
}
#myBtn{
    background-color: rgb(100, 15, 15);
    padding: 5px;
    border-radius: 20px;
    border-color: rgb(236, 111, 27);
    color: rgb(236, 111, 27);
    font-family: 'Open Sans', sans-serif;
    cursor: pointer;
    margin: 20px
}






footer{
    
    display: flex;
    flex-flow: row wrap;
    padding: 50px;
    background-color: rgb(100, 15, 15);
}
.footer div{
    margin-top: 20px;
}
.footer #footer-name p{
    text-align: center;
    margin-bottom: 10px;
    color: rgb(236, 111, 27);
    font-family: 'Oswald', sans-serif;
    text-transform: uppercase;
    font-size: 3vh;
    letter-spacing: 4px;

}
footer img{
    height: 10vh;
}

.footer >*{
    flex: 1 100%;
    text-align: center;
}

.footer-left{
    margin-right: 1.25em;
    margin-bottom: 2em;
}
.footer-subs{
    color: rgb(236, 111, 27);
    font-family: 'Oswald', sans-serif;
    text-transform: uppercase;
    font-size: 2vh;
    letter-spacing: 3px;
}
.footer ul{
    list-style: none;
}
.footer a{
    text-decoration: none;
}
.footer-right{
    display: flex;
    flex-flow: row wrap;
}
.footer-right >*{
    flex: 1 50%;
    margin-right: 6px;
}
.footer-bottom{
    text-align: center;
    padding-top: 50px;
}
.footer p,ul,a{
    color: ivory;
    font-family: 'Open Sans', sans-serif;
    letter-spacing: 1px;
    font-size: 1.5vh;
}

.social a:hover{
    color: rgb(255, 94, 0);
}
@media screen and (max-width:768px){
    .nav-links{
        display: none;
        transition: 0.5s ease-out;
    }
    .burger{
        display: block;
    }
    .ranges{
        display: block;
    }
}

@media screen and (min-width: 769px){
    .footer-right >*{
        flex: 1;
    }
    .footer-left{
        flex: 1 0px;
    }
    .footer-right{
        flex: 2 0px;
    }
}

